@@ -1,16 +1,17 @@
 # --
 # PostMaster.t - PostMaster tests
-# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
+# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: PostMaster.t,v 1.4.2.1 2007/12/13 01:57:53 martin Exp $
+# $Id: PostMaster.t,v 1.4.2.2 2008/08/11 22:52:55 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
-# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
+# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
 # --
 
 use Kernel::System::PostMaster::LoopProtection;
 use Kernel::System::PostMaster;
+use Kernel::System::PostMaster::Filter;
 use Kernel::System::Ticket;
 use Digest::MD5 qw(md5_hex);
 
@@ -21,6 +22,7 @@ for my $Module (qw(DB FS)) {
     );
 
     $Self->{LoopProtectionObject} = Kernel::System::PostMaster::LoopProtection->new(%{$Self});
+    $Self->{PostMasterFilter}     = Kernel::System::PostMaster::Filter->new( %{$Self} );
 
     # get rand sender address
     my $UserRand1 = 'example-user'.int(rand(1000000)).'@example.com';
@@ -63,6 +65,45 @@ for my $NumberModule (qw(AutoIncrement DateChecksum Date Random)) {
         $Self->{ConfigObject}->Set(
             Key => 'Ticket::StorageModule',
             Value => "Kernel::System::Ticket::$StorageModule",
+        );
+
+        # add rand postmaster filter
+        my $FilterRand1 = 'filter' . int( rand(1000000) );
+        my $FilterRand2 = 'filter' . int( rand(1000000) );
+        my $FilterRand3 = 'filter' . int( rand(1000000) );
+        $Self->{PostMasterFilter}->FilterAdd(
+            Name  => $FilterRand1,
+            Match => {
+                Subject => 'test',
+                To      => 'EMAILADDRESS:darthvader@otrs.org',
+            },
+            Set   => {
+                'X-OTRS-Queue'        => 'Misc',
+                'X-OTRS-TicketKey1'   => 'Key1',
+                'X-OTRS-TicketValue1' => 'Text1',
+            }
+        );
+        $Self->{PostMasterFilter}->FilterAdd(
+            Name  => $FilterRand2,
+            Match => {
+                Subject => 'test',
+                To      => 'EMAILADDRESS:darthvader2@otrs.org',
+            },
+            Set   => {
+                'X-OTRS-TicketKey2'   => 'Key2',
+                'X-OTRS-TicketValue2' => 'Text2',
+            }
+        );
+        $Self->{PostMasterFilter}->FilterAdd(
+            Name  => $FilterRand3,
+            Match => {
+                Subject => 'test 1',
+                To      => 'otrs.org',
+            },
+            Set   => {
+                'X-OTRS-TicketKey3'   => 'Key3',
+                'X-OTRS-TicketValue3' => 'Text3',
+            }
         );
 
         # get rand sender address
@@ -110,6 +151,46 @@ for my $NumberModule (qw(AutoIncrement DateChecksum Date Random)) {
             my @ArticleIDs = $Self->{TicketObject}->ArticleIndex(
                 TicketID => $Return[1],
             );
+
+            if ( $File == 1 ) {
+                my @Tests = (
+                    {
+                        Key    => 'Queue',
+                        Result => 'Misc',
+                    },
+                    {
+                        Key    => 'TicketFreeKey1',
+                        Result => 'Key1',
+                    },
+                    {
+                        Key    => 'TicketFreeText1',
+                        Result => 'Text1',
+                    },
+                    {
+                        Key    => 'TicketFreeKey2',
+                        Result => '',
+                    },
+                    {
+                        Key    => 'TicketFreeText2',
+                        Result => '',
+                    },
+                    {
+                        Key    => 'TicketFreeKey3',
+                        Result => 'Key3',
+                    },
+                    {
+                        Key    => 'TicketFreeText3',
+                        Result => 'Text3',
+                    },
+                );
+                for my $Test (@Tests) {
+                    $Self->Is(
+                        $Ticket{ $Test->{Key} },
+                        $Test->{Result},
+                        "#$NumberModule $StorageModule $File $Test->{Key} check",
+                    );
+                }
+            }
 
             if ($File == 3) {
                 # check body
@@ -385,6 +466,9 @@ for my $NumberModule (qw(AutoIncrement DateChecksum Date Random)) {
                 "#$NumberModule $StorageModule $File TicketDelete()",
             );
         }
+        $Self->{PostMasterFilter}->FilterDelete( Name => $FilterRand1 );
+        $Self->{PostMasterFilter}->FilterDelete( Name => $FilterRand2 );
+        $Self->{PostMasterFilter}->FilterDelete( Name => $FilterRand3 );
     }
 }
 
